fix poll votes color under dark mode

--- a/src/Flows.css
+++ b/src/Flows.css
@@ -384,3 +384,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.root-dark-mode .box-poll .styles_votes__3IO-o {
+  color: #e0e0e0 !important;
+}
